Alteraçoes funcionamento local